# chinese-scraper-utils

./: .gitignore  API_REFERENCE.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.ja.md  README.md  README.zh-CN.md  README.zh-Hant.md  SECURITY.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml
examples/: basic_usage.py  event_extraction.py  hot_scrapers.py
scripts/: publish.sh
src/chinese_scraper_utils/: __init__.py  __main__.py  _ai.py  _category.py  _city.py  _date.py  _extractor.py  _hash.py  _hotspots.py  _rate_limit.py  _search.py  _ua.py  errors.py
src/cn_scraper_utils/: __init__.py  _ai.py  _city.py  _hash.py  _rate_limit.py
tests/: test_ai.py  test_category.py  test_city.py  test_date.py  test_errors.py  test_extractor.py  test_hash.py  test_hotspots.py  test_main.py  test_rate_limit.py  test_search.py  test_ua.py
