[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chinese-scraper-utils"
version = "0.2.3"
description = "Chinese scraping utilities — date parsing, city extraction, SHA256 ID, UA pool, rate limiter, DeepSeek client, web search, hot topic scrapers, LLM extraction pipeline"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.24",
    "openai>=1.0",
]

[project.optional-dependencies]
search = ["ddgs>=1.0"]
async = ["httpx>=0.25"]

authors = [
    { name = "DreamNight", email = "support@dreamnight.net.cn" }
]
keywords = ["scraping", "chinese", "web-scraping", "date-parsing", "llm", "deepseek", "nlp"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
Homepage = "https://github.com/sixtdreanight/chinese-scraper-utils"
Repository = "https://github.com/sixtdreanight/chinese-scraper-utils.git"
Issues = "https://github.com/sixtdreanight/chinese-scraper-utils/issues"

[tool.setuptools.packages.find]
where = ["src"]
