[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chinese-scraper-utils"
version = "0.2.8"
description = "Chinese scraping utilities — date parsing, city extraction, SHA256 ID, UA pool, rate limiter, DeepSeek client, web search, hot topic scrapers, LLM extraction pipeline"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "DreamNight", email = "support@dreamnight.net.cn" }
]
keywords = ["scraping", "chinese", "web-scraping", "date-parsing", "llm", "deepseek", "nlp"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.24",
    "openai>=1.0",
]

[project.optional-dependencies]
search = ["ddgs>=1.0"]
async = ["httpx>=0.25"]

[project.urls]
Homepage = "https://github.com/sixtdreanight/chinese-scraper-utils"
Repository = "https://github.com/sixtdreanight/chinese-scraper-utils.git"
Issues = "https://github.com/sixtdreanight/chinese-scraper-utils/issues"

[tool.setuptools.packages.find]
where = ["src"]
